src/objects/MTN_Channels_Dealership__c.object
<CustomObject>
    <description>A dealership for MTN channels</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>The display name of the dealership</description>
        <inlineHelpText>Please enter the name of this dealership that will be displayed on the dashboard and reports</inlineHelpText>
        <label>Display Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_Display_Name__c</fullName>
        <formula>Region__r.Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region that the dealership is in</description>
        <inlineHelpText>Please select the region that the dealership is in</inlineHelpText>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>MTN Channels Dealerships</relationshipLabel>
        <relationshipName>MTN_Channels_Dealerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MTN Channels Dealership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MTNCD{0000000000}</displayFormat>
        <label>MTN Channels Dealership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTN Channels Dealerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>